bugfixes - text wrapping in firefox, wrong variable name when loading puzzles saved in localstorage

--- a/src/components/Crossword/CrosswordSelectedClue.css
+++ b/src/components/Crossword/CrosswordSelectedClue.css
@@ -35,6 +35,7 @@
     font-size: 26px;
     display: inline-table;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 .crossword-selected-clue-container-floating .clue-text {
